FEAT: Construct queries - Added tests - Fixed construct queries